[gd_scene load_steps=27 format=3 uid="uid://c28kdklv1xr5s"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_shpq1"]
[ext_resource type="Script" uid="uid://bkh8w7itp7ty6" path="res://addons/CustomControls/Dialogs/CommandEvents/change_actor_or_vehicle_scene_dialog.gd" id="2_shpq1"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="3_7xn1g"]
[ext_resource type="PackedScene" uid="uid://bwgf6rhx3a6cq" path="res://addons/CustomControls/custom_panel.tscn" id="4_ekifu"]
[ext_resource type="PackedScene" uid="uid://c6vqhgg1w1sxj" path="res://addons/CustomControls/custom_button_2.tscn" id="5_g4rie"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="6_aym67"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="7_25jbv"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="8_65f1u"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="9_blog4"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="10_25n7f"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u11f1"]

[sub_resource type="Gradient" id="Gradient_u5yrp"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6yyp3"]
gradient = SubResource("Gradient_u5yrp")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_316jl"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Gradient" id="Gradient_yqasu"]
colors = PackedColorArray(0.286275, 0.301961, 0.309804, 1, 0.337255, 0.34902, 0.356863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_relqq"]
resource_local_to_scene = true
gradient = SubResource("Gradient_yqasu")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8m3b6"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_relqq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fneyr"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qiqap"]
texture = ExtResource("7_25jbv")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7qdgr"]
texture = ExtResource("8_65f1u")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjylh"]
texture = ExtResource("9_blog4")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_subod"]
texture = ExtResource("10_25n7f")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hfo07"]
texture = ExtResource("7_25jbv")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4sujn"]
texture = ExtResource("8_65f1u")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5stfh"]
texture = ExtResource("9_blog4")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_maa40"]
texture = ExtResource("10_25n7f")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="ChangeActorOrVehicleSceneDialog" type="Window"]
title = "Change Scene"
position = Vector2i(0, 36)
size = Vector2i(480, 160)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_shpq1")
script = ExtResource("2_shpq1")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_u11f1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6yyp3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VehicleContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VehicleContainer"]
layout_mode = 2
text = "Vehicle:"

[node name="VehicleOptions" parent="MarginContainer/VBoxContainer/VehicleContainer" instance=ExtResource("3_7xn1g")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Select the transport to which you want to change the scene"
text_overrun_behavior = 3
selected = 0
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "Land Transport"
popup/item_0/id = 0
popup/item_1/text = "Sea Transport"
popup/item_1/id = 1
popup/item_2/text = "Air Transport"
popup/item_2/id = 2

[node name="ActorContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ActorContainer"]
layout_mode = 2
text = "Vehicle:"

[node name="ActorsOptions" parent="MarginContainer/VBoxContainer/ActorContainer" instance=ExtResource("3_7xn1g")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Choose the character you want to change the scene for"
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="ScenePanel" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_ekifu")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_316jl")
style1 = SubResource("StyleBoxFlat_316jl")
style2 = SubResource("StyleBoxTexture_8m3b6")
style3 = SubResource("StyleBoxFlat_fneyr")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScenePanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScenePanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScenePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Scene"

[node name="Scene" parent="MarginContainer/VBoxContainer/ScenePanel/MarginContainer/VBoxContainer" instance=ExtResource("5_g4rie")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Choose the new scene for the selected object

[Note]: Middle Click to erase the current scene"
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
text = "Select scene"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("6_aym67")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/disabled = SubResource("StyleBoxTexture_qiqap")
theme_override_styles/hover = SubResource("StyleBoxTexture_7qdgr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mjylh")
theme_override_styles/normal = SubResource("StyleBoxTexture_subod")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("6_aym67")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/disabled = SubResource("StyleBoxTexture_hfo07")
theme_override_styles/hover = SubResource("StyleBoxTexture_4sujn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5stfh")
theme_override_styles/normal = SubResource("StyleBoxTexture_maa40")
text = "CANCEL"

[connection signal="middle_click_pressed" from="MarginContainer/VBoxContainer/ScenePanel/MarginContainer/VBoxContainer/Scene" to="." method="_on_scene_middle_click_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScenePanel/MarginContainer/VBoxContainer/Scene" to="." method="_on_scene_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
